------------------------------------------------------------------------------
WANPIPE TDM VOICE - IP/WAN Package

------------------------------------------------------------------------------
Copyright (c) 1995-2017 Sangoma Technologies Inc.

For more info visit: http://wiki.sangoma.com
------------------------------------------------------------------------------

* Thu Oct 12 2017 Pushkar Singh <psingh@sangoma.com> - 7.0.23
==================================================================
- Support to create proper wanec device for dahdi


* Wed Oct 11 2017 Pushkar Singh <psingh@sangoma.com> - 7.0.22
==================================================================
- Support for redhat release version 7.4+ kernel i.e. 3.10.0-693


* Tue Oct 4 2017 Nenad Corbic <ncorbic@sangoma.com> -  7.0.21
==================================================================
- Fix BRI intermittent frame loss or delay
- Support for Kernel version 4.7+
- BRI LINK activation logic update when hardhdlc is enable
- Added verification for temporary storage
- Setup and Makefile to support kernel version 4.7+
- Fix tx timeout print undir tdm api data mode.


* Mon May 19 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.20
==================================================================
- Compilation fix in non-dahdi mode
- Default to fe poll mode.

* Mon May 9 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.19
==================================================================
- Add RM_RING_DEBOUNCE config option
- Fix for Centos 5 build
- Update to fake polarity feature. Reset fake polarity timeout
  on each ring. We do not want fake polarity triggering during rings.
- Update to fake polarity feature.
- More reliable for DTMF caller id scenarios. 
- RM_FAKE_POLARITY_THRESHOLD should be 16000 


* Mon Mar 17 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.18
==================================================================