@@ -1,2 +1,2 @@
-wanpipe_linux: git ver e1c9dfe
+wanpipe_linux: git ver 320b9b1
 wanpipe_common: git ver 410a541
