@@ -181,6 +181,13 @@ KERN_MEMCPY_FROM_MSG=$(shell grep "memcpy_from_msg" $(KSRC)/include/linux/skbuff
 EXTRA_CFLAGS+=-DKERN_MEMCPY_FROM_MSG=$(KERN_MEMCPY_FROM_MSG)
 endif
 
+ifneq (,$(wildcard $(KDIR)/include/linux/skbuff.h))
+KERN_MEMCPY_TO_MSG=$(shell grep "memcpy_to_msg" $(KDIR)/include/linux/skbuff.h -c)
+EXTRA_CFLAGS+=-DKERN_MEMCPY_TO_MSG=$(KERN_MEMCPY_TO_MSG)
+else
+KERN_MEMCPY_TO_MSG=$(shell grep "memcpy_to_msg" $(KSRC)/include/linux/skbuff.h -c)
+EXTRA_CFLAGS+=-DKERN_MEMCPY_TO_MSG=$(KERN_MEMCPY_TO_MSG)
+endif
 
 ifneq (,$(wildcard $(KDIR)/include/net/sock.h))
 KERN_SK_FOR_NODE_FEATURE=$(shell grep "sk_for_each.*node" $(KDIR)/include/net/sock.h -c)
