@@ -1,5 +1,5 @@
 Package: wanpipe
-Version: 7.0.23-0
+Version: 7.0.24-0
 Section: networking
 Priority: optional
 Architecture: all
