@@ -10,14 +10,14 @@
 #define WANPIPE_COMPANY         "Sangoma Technologies Inc"
 
 /********** LINUX **********/
-#define WANPIPE_VERSION			"7.0.23"
+#define WANPIPE_VERSION			"7.0.24"
 #define WANPIPE_SUB_VERSION				"0"
 #define WANPIPE_LITE_VERSION			"1.1.1"
 
 #if defined(__LINUX__)
 #define WANPIPE_VERSION_MAJOR			7
 #define WANPIPE_VERSION_MINOR			0
-#define WANPIPE_VERSION_MINOR1			23
+#define WANPIPE_VERSION_MINOR1			24
 #define WANPIPE_VERSION_MINOR2			0
 #endif
 
