@@ -1,6 +1,6 @@
 %define WANPIPE_VER	  wanpipe-util
 %define name              %{WANPIPE_VER}
-%define version           7.0.23
+%define version           7.0.24
 %define release           0
 %define	serial	 	  1
 %define UTILS_DIR 	  /usr/sbin
@@ -228,6 +228,11 @@ chmod 755 /usr/local/sbin/setup-sangoma
 
 
 %changelog
+* Thu Oct 12 2017 Pushkar Singh <psingh@sangoma.com> - 7.0.24
+==================================================================
+- Adding backward compatibility for older kernel both debian as well redhat
+
+
 * Thu Oct 12 2017 Pushkar Singh <psingh@sangoma.com> - 7.0.23
 ==================================================================
 - Support to create proper wanec device for dahdi
