@@ -7,6 +7,11 @@ Copyright (c) 1995-2017 Sangoma Technologies Inc.
 For more info visit: http://wiki.sangoma.com
 ------------------------------------------------------------------------------
 
+* Thu Oct 12 2017 Pushkar Singh <psingh@sangoma.com> - 7.0.24
+==================================================================
+- Adding backward compatibility for older kernel both debian as well redhat
+
+
 * Thu Oct 12 2017 Pushkar Singh <psingh@sangoma.com> - 7.0.23
 ==================================================================
 - Support to create proper wanec device for dahdi
